--- a/pages/activities/activity-details/index.wxml
+++ b/pages/activities/activity-details/index.wxml
@@ -58,7 +58,7 @@
   <view class="block" wx:if="{{!info.userStatus.owned}}">
     <view class="organizer">
       <view class="block_title">主办方</view>
-      <block wx:for="{{info.authActivityOrganizers}}" wx:key="id">
+      <block wx:for="{{info.authActivityOrganizers}}" wx:key="{{item.id}}">
         <view class="organizer_content clearfix">
           <view class="organizer_pic">
             <image mode="aspectFill" src="{{item.coverURL}}"></image>
@@ -108,7 +108,7 @@
             <view class="organizer_btn" wx:if="{{item.isFollow}}">
               已关注
             </view>
-            <view class="organizer_btn" wx:else>
+            <view class="organizer_btn" bindtap="followOrganizer" wx:else>
               关注
             </view>
           </view>
@@ -163,28 +163,68 @@
         发布活动
       </view>
     </navigator>
-    <block wx:if="{{info.userStatus.signedUp}}">
-      <!-- 已报名 -->
-      <block wx:if="{{info.status === '已开始'}}">
-        <!-- 活动已开始 -->
-        <block wx:if="{{info.userStatus.signedIn}}">
-          <!-- 已签到 -->
-          <view class="join_btn">已签到</view>
-        </block>
-        <block wx:if="{{info.userStatus.signedIn}}">
-          <!-- 未签到 -->
-          <view class="join_btn">已报名</view>
-        </block>
+    <block wx:if="{{pageLogic.isPayPending || pageLogic.showVoucher}}">
+      <!-- 显示两个按钮 -->
+      <view class="pay_btn">立即支付</view>
+      <!-- 第一个按钮 -->
+      <block wx:if="{{pageLogic.isArticle}}">
+        <view class="cancel_btn" wx:if="{{pageLogic.isFollowed}}">
+          已关注组织号
+        </view>
+        <view class="cancel_btn" wx:else>
+          关注组织号
+        </view>
       </block>
       <block wx:else>
-        <!-- 活动未开始 -->
-        <view class="pay_btn">立即支付</view>
-        <view class="cancel_btn">取消报名</view>
+        <block wx:if="{{info.countDown}}">
+          <view class="cancel_btn">
+            离报名开始还有{{info.countDown}}
+          </view>
+        </block>
+        <block wx:else>
+          <block wx:if="{{info.eventStatus.signUpVisible}}">
+            <block wx:if="{{info.userStatus.signupStatus != 7 && info.signUpRemark}}">
+              <view class="cancel_btn">
+                {{info.signUpRemark}}
+              </view>
+            </block>
+            <block wx:elif="{{info.userStatus.signupStatus != 7}}">
+              <view class="cancel_btn">
+                {{info.signUpTitle}}
+              </view>
+            </block>
+            <block wx:elif="{{info.userStatus.signupStatus != 7}}">
+              <view class="cancel_btn">
+                {{info.signUpTitle}}
+              </view>
+            </block>
+          </block>
+          <block wx:elif="{{info.eventStatus.signUpCancellable}}">
+            <block wx:if="{{info.eventStatus.signUpRefundApplied}}">
+              <view class="cancel_btn">
+                取消报名(已申请）
+              </view>
+            </block>
+            <block wx:else>
+              <view class="cancel_btn">
+                取消报名
+              </view>
+            </block>
+          </block>
+          <block wx:elif="{{!info.eventStatus.signUpVisible && !info.eventStatus.signUpCancellable}}">
+            <view class="cancel_btn">
+              {{info.signUpRemark}}
+            </view>
+          </block>
+        </block>
       </block>
     </block>
     <block wx:else>
-      <view class="join_btn">{{info.signUpTitle}}</view>
+      <!-- 显示一个按钮 -->
+      <view class="join_btn" wx:if="{{pageLogic.showVoucher}}">报名凭证</view>
+      <view class="join_btn" wx:elif="{{pageLogic.isPayPending}}">立即支付</view>
     </block>
+
   </view>
 </view>
 <i-spin fix custom wx:if="{{loading}}">
