--- a/pages/activities/activity-details/index.wxss
+++ b/pages/activities/activity-details/index.wxss
@@ -281,6 +281,7 @@ page {
   color: #fff;
   font-size: 30rpx;
   text-align: center;
+  white-space: nowrap;
   width: 255rpx;
 }
 
@@ -291,6 +292,7 @@ page {
   background: #ffa404;
   color: #fff;
   font-size: 32rpx;
+  white-space: nowrap;
   text-align: center;
   width: 255rpx;
 }
